--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,15 +1,13 @@
 <tr>
   <td class="micropost">
-    <span class="content"><%= micropost.content %></span>
+    <span class="content"><%= wrap(micropost.content) %></span>
     <span class="timestamp">
       Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     </span>
   </td>
   <% if current_user?(micropost.user) %>
     <td>
-      <%= link_to "delete", micropost, method: :delete,
-                                       confirm: "You sure?",
-                                       title: micropost.content %>
+      <%= render(partial: "shared/delete_item", :locals=>{item: micropost}) %>
     </td>
   <% end %>
 </tr>
